--- a/style.css
+++ b/style.css
@@ -1,10 +1,29 @@
+*, 
+*::after,
+*::before {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0; 
+}
+
 h1 {
     text-align: center; 
     font-size: 4rem;
 }
 
 .container {
-    width: 500px; 
     display: grid; 
     margin: 0 auto; 
+    max-width: 500px; 
+    min-height: 500px; 
+}
+
+.options {
+    display: grid; 
+    margin: 0 auto;
+    max-width: 500px;  
+}
+
+.options button {
+    width: 2rem; 
 }
